		
	* Bug Fix: clone() is a reserved word in PHP5. All clone methods have been renamed replicate(). (Adam Franco)
		
	* Bug Fix: Type now validates arguments. ConfigurationPropertiesType now instantiates properly. (Adam Franco)
		
	* Bug Fix: Removed unused parameters from several methods that were throwing warnings. (Adam Franco)
	
v. 0.3.1 (2005-04-11)
----------------------------------------------------
		
	* Change: Authentication now plays nicely with GET parameters and maintains them around during the authentication sequence. (Adam Franco)
		
	* Change: Agent searching works with new mapping system. (Adam Franco)
	
v. 0.3.0 (2005-04-07)
----------------------------------------------------
		
	* Change: New Framework/Architecture-GUI/Theme interaction decouples the Harmoni object from the output system. The GUIManager and other OutputHandlers extend the OutputHandler abstract class and can be attached to Harmoni. A default 'BasicOutputHandler' is used when no other OutputHandler is specified. (Adam Franco)
		
	* Change: Services::startService(), Services::stopService(), Services::restartService(), and Services::startAll() are now deprecated and print warnings if used. Please use Services::startManagerAsService() and/or Services::getService() instead. (Adam Franco)
		
	* Change: 'Service' classes no longer extend the services interface or use start()/stop() methods. These had been designed into Harmoni, but were never used and are now removed. start()/stop() methods will NOT be called during service starting/stopping. (Adam Franco)
		
	* Change: OKI version 1 interfaces and implementations have been removed, saving 2MB of files and cleaning up the source tree. (Adam Franco)
		
	* Change: The hierarchy's Tree class, HierarchyManager/tree/Tree.class.php, now caches its traversal results. (Savings: 93,529 calls to tree-&gt;_traverse(), 43 seconds execution time on a 500MHz PC in a 5000-node hierarchy) (Adam Franco)
		